<resources>

    <string name="app_name">StockTake</string>
    <string name="slogan">Inventory made easy.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_studentId">Student ID</string>
    <string name="prompt_fifthRow">Fifth Row</string>
    <string name="role">Role</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repassword">Retype Password</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="user_profile">User Profile</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_google_login">GoogleLoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="login_with_google">Login With Google</string>
    <string name="your_telegram_handle">Your Telegram Handle</string>
    <string name="your_student_id">Your Student ID</string>


    <!--  Inventory String Constants-->
    <string name="fab_add_item">Add Inventory Item</string>
    <string name="invalid_quantity">Quantity must be a number between 0 and the total available quantity</string>

    <!-- QR String Constants -->
    <string name="option_view_details">View Item Details</string>
    <string name="option_loan">Loan This Item</string>
    <string name="unable_to_loan">This item is completely loaned out.</string>
    <string name="create_loan_success">Successfully created a loan object</string>
</resources>